--- a/styles/content-template-styles.css
+++ b/styles/content-template-styles.css
@@ -90,7 +90,7 @@ aside {
     height: calc(100% - 66px);
     position: fixed;
     left: 0px;
-    top: 66px;
+    bottom: 0px;
     background-color: white;
 }
 aside:hover {
