--- a/styles/content-template-styles.css
+++ b/styles/content-template-styles.css
@@ -6,7 +6,15 @@ html, body {
     box-sizing: border-box;
     font-family: 'Source Sans Pro', Arial, sans-serif;
     height: 100%;
-    overflow: hidden;
+}
+.wrapper {
+    position: absolute;
+    top: 0.5px;
+    left: 0;
+    right: 0;
+    bottom: 0.5px;
+    overflow-x: auto;
+    overflow-y: auto; 
 }
 *, *::before, *::after {
     box-sizing: inherit;
